<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/toolBar">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                android:layout_centerVertical="true"
                android:background="@drawable/back_on" />

            <TextView
                android:id="@+id/tv_title_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/textOn"
                android:textSize="@dimen/topic_text_size" />
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fab"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/plus"
            app:fabSize="normal"
            app:elevation="12dp"
            app:borderWidth="0dp"
            android:backgroundTint="@color/toolBar"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:id="@+id/ll_fab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginRight="8dp"
                android:paddingLeft="@dimen/fab_padding_left_right"
                android:paddingRight="@dimen/fab_padding_left_right"
                android:paddingTop="@dimen/fab_padding_top_bottom"
                android:paddingBottom="@dimen/fab_padding_top_bottom"
                android:textSize="@dimen/fab_text_size"
                android:background="@drawable/shap_text_view"
                android:layout_gravity="center_vertical"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                app:backgroundTint="@color/colorTab_layout"
                app:elevation="6dp"
                app:borderWidth="0dp"
                android:src="@drawable/btn_home_on"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_fab_size_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_up"
                android:paddingLeft="@dimen/fab_padding_left_right"
                android:paddingRight="@dimen/fab_padding_left_right"
                android:paddingTop="@dimen/fab_padding_top_bottom"
                android:paddingBottom="@dimen/fab_padding_top_bottom"
                android:textSize="@dimen/fab_text_size"
                android:background="@drawable/shap_text_view"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_size_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                app:backgroundTint="@color/colorTab_layout"
                app:elevation="6dp"
                app:borderWidth="0dp"
                android:src="@drawable/btn_font2_on"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_fab_size_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="8dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_down"
                android:paddingLeft="@dimen/fab_padding_left_right"
                android:paddingRight="@dimen/fab_padding_left_right"
                android:paddingTop="@dimen/fab_padding_top_bottom"
                android:paddingBottom="@dimen/fab_padding_top_bottom"
                android:textSize="@dimen/fab_text_size"
                android:background="@drawable/shap_text_view"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_size_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                app:backgroundTint="@color/colorTab_layout"
                app:elevation="6dp"
                app:borderWidth="0dp"
                android:src="@drawable/btn_font1_on"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="8dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:paddingLeft="@dimen/fab_padding_left_right"
                android:paddingRight="@dimen/fab_padding_left_right"
                android:paddingTop="@dimen/fab_padding_top_bottom"
                android:paddingBottom="@dimen/fab_padding_top_bottom"
                android:textSize="@dimen/fab_text_size"
                android:background="@drawable/shap_text_view"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                app:backgroundTint="@color/colorTab_layout"
                app:elevation="6dp"
                app:borderWidth="0dp"
                android:src="@drawable/btn_share_on"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:paddingLeft="@dimen/fab_padding_left_right"
                android:paddingRight="@dimen/fab_padding_left_right"
                android:paddingTop="@dimen/fab_padding_top_bottom"
                android:paddingBottom="@dimen/fab_padding_top_bottom"
                android:textSize="@dimen/fab_text_size"
                android:background="@drawable/shap_text_view"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="6dp"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                app:backgroundTint="@color/colorTab_layout"
                app:elevation="6dp"
                app:borderWidth="0dp"
                android:src="@drawable/btn_favorite"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>